test/files/neg/quasiquotes_disambiguation_d.check
quasiquotes_disambiguation_d.scala:7: error: ')' expected but string literal found.
  println(s"foo" "b")
                 ^
one error found
